correccion espacios about me

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Pedro Rizquez</title>
+    <title>Rizquez Website</title>
   </head>
   <body>
     <div id="app"></div>
